/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/GUIForms/JFrame.java to edit this template
 */
package projekbelahketupat;

/**
 *
 * @author ACER
 */
public class main extends javax.swing.JFrame {

    /**
     * Creates new form FrameTampil
     */
    public main() {
        initComponents();
        
        BelahKetupat.logTarget = jTextArea1;
        
        // Bikin tampilan text area jadi hitam hijau 
        jTextArea1.setBackground(new java.awt.Color(15, 15, 15));
        jTextArea1.setForeground(new java.awt.Color(0, 255, 0));
        jTextArea1.setEditable(false);
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        jLabel1 = new javax.swing.JLabel();
        jScrollPane1 = new javax.swing.JScrollPane();
        jTextArea1 = new javax.swing.JTextArea();
        JScrollPane2 = new javax.swing.JScrollPane();
        panelBar = new javax.swing.JPanel();
        MenuBar = new javax.swing.JMenuBar();
        Manual = new javax.swing.JMenu();
        mCheckBoxBK = new javax.swing.JCheckBoxMenuItem();
        mCheckBoxLimas = new javax.swing.JCheckBoxMenuItem();
        mCheckBoxPrisma = new javax.swing.JCheckBoxMenuItem();
        jMenuInput = new javax.swing.JMenuItem();
        Random = new javax.swing.JMenu();
        rCheckBoxBK = new javax.swing.JCheckBoxMenuItem();
        rCheckBoxLimas = new javax.swing.JCheckBoxMenuItem();
        rCheckBoxPrisma = new javax.swing.JCheckBoxMenuItem();
        cbMultithreading = new javax.swing.JCheckBoxMenuItem();
        RandomRun = new javax.swing.JMenuItem();

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
        setTitle("Program Belah Ketupat");

        jLabel1.setFont(new java.awt.Font("Segoe UI", 0, 24)); // NOI18N
        jLabel1.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
        jLabel1.setText("BELAH KETUPAT");
        jLabel1.setHorizontalTextPosition(javax.swing.SwingConstants.CENTER);
        jLabel1.setVerifyInputWhenFocusTarget(false);

        jTextArea1.setColumns(20);
        jTextArea1.setRows(5);
        jScrollPane1.setViewportView(jTextArea1);

        javax.swing.GroupLayout panelBarLayout = new javax.swing.GroupLayout(panelBar);
        panelBar.setLayout(panelBarLayout);
        panelBarLayout.setHorizontalGroup(
            panelBarLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGap(0, 339, Short.MAX_VALUE)
        );
        panelBarLayout.setVerticalGroup(
            panelBarLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGap(0, 240, Short.MAX_VALUE)
        );

        JScrollPane2.setViewportView(panelBar);

        Manual.setText("Input Manual");

        mCheckBoxBK.setSelected(true);
        mCheckBoxBK.setText("Belah Ketupat");
        Manual.add(mCheckBoxBK);

        mCheckBoxLimas.setSelected(true);
        mCheckBoxLimas.setText("Limas Belah Ketupat");
        Manual.add(mCheckBoxLimas);

        mCheckBoxPrisma.setSelected(true);
        mCheckBoxPrisma.setText("Prisma Belah Ketupat");
        Manual.add(mCheckBoxPrisma);

        jMenuInput.setText("Input Data");
        jMenuInput.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                jMenuInputActionPerformed(evt);
            }
        });
        Manual.add(jMenuInput);

        MenuBar.add(Manual);

        Random.setText("Random");

        rCheckBoxBK.setSelected(true);
        rCheckBoxBK.setText("Belah Ketupat");
        Random.add(rCheckBoxBK);

        rCheckBoxLimas.setSelected(true);
        rCheckBoxLimas.setText("Limas Belah Ketupat");
        Random.add(rCheckBoxLimas);

        rCheckBoxPrisma.setSelected(true);
        rCheckBoxPrisma.setText("Prisma Belah Ketupat");
        Random.add(rCheckBoxPrisma);

        cbMultithreading.setSelected(true);
        cbMultithreading.setText("Multithreading");
        Random.add(cbMultithreading);

        RandomRun.setText("Run");
        RandomRun.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                RandomRunActionPerformed(evt);
            }
        });
        Random.add(RandomRun);

        MenuBar.add(Random);

        setJMenuBar(MenuBar);

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
        getContentPane().setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addContainerGap()
                .addComponent(jScrollPane1, javax.swing.GroupLayout.PREFERRED_SIZE, 349, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addComponent(JScrollPane2, javax.swing.GroupLayout.PREFERRED_SIZE, 345, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addContainerGap())
            .addComponent(jLabel1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addContainerGap()
                .addComponent(jLabel1, javax.swing.GroupLayout.PREFERRED_SIZE, 26, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
                    .addComponent(jScrollPane1)
                    .addComponent(JScrollPane2))
                .addContainerGap())
        );

        pack();
    }// </editor-fold>//GEN-END:initComponents

    private void jMenuInputActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuInputActionPerformed
        // TODO add your handling code here:                 
        
        // 1. Cek apakah ada yang dicentang
        if (!mCheckBoxBK.isSelected() && !mCheckBoxPrisma.isSelected() && !mCheckBoxLimas.isSelected()) {
            tampilkanNotif("Centang minimal satu bangun di menu Input Manual!");
            return;
        }

        // 2. Siapkan kolom input
        javax.swing.JTextField d1Field = new javax.swing.JTextField();
        javax.swing.JTextField d2Field = new javax.swing.JTextField();
        javax.swing.JTextField tField = new javax.swing.JTextField();

        // 3.  Cek apakah kita butuh input Tinggi?
        boolean butuhTinggi = mCheckBoxPrisma.isSelected() || mCheckBoxLimas.isSelected();

        // 4. Susun form secara dinamis menggunakan ArrayList
        java.util.ArrayList<Object> formItems = new java.util.ArrayList<>();
        formItems.add("Input Diagonal 1:");
        formItems.add(d1Field);
        formItems.add("Input Diagonal 2:");
        formItems.add(d2Field);
        
        // Tinggi HANYA dimunculkan kalau butuhTinggi = true
        if (butuhTinggi) {
            formItems.add("Input Tinggi (Untuk Prisma/Limas):");
            formItems.add(tField);
        }

        // 5. Tampilkan Pop-up
        int option = javax.swing.JOptionPane.showConfirmDialog(this, formItems.toArray(), "Input Manual Dinamis", javax.swing.JOptionPane.OK_CANCEL_OPTION);

        if (option == javax.swing.JOptionPane.OK_OPTION) {
            try {
                // Tarik data
                double d1 = Double.parseDouble(d1Field.getText());
                double d2 = Double.parseDouble(d2Field.getText());
                double t = 0;
                
                if (d1 <= 0 || d2 <= 0) {
                    throw new Exception ("nilai d1 dan d2 tidak boleh <= 0");
                
                }
                
                if (butuhTinggi) {
                    t = Double.parseDouble(tField.getText());
                    if (t <= 0) {
                        throw new Exception("nilai t tidak boleh <=0");
                    }
                }

                jTextArea1.append("\n>> [MANUAL] Memproses (D1=" + d1 + ", D2=" + d2 + (butuhTinggi ? ", T=" + t : "") + ")\n");

                
                if (mCheckBoxBK.isSelected()) {
                    jTextArea1.append("-> Menghitung Belah Ketupat...\n");

                    // 1. Buat objek pakai constructor default (tanpa parameter)
                    BelahKetupat bk = new BelahKetupat();

                    // 2. IMPLEMENTASI METHOD OVERLOADING DI SINI!
                    // Kita langsung lempar nilai d1 dan d2 dari JTextField ke method
                    bk.hitungSisi(d1, d2);
                    bk.hitungLuas(d1, d2);

                    // Karena hitungSisi(d1, d2) sudah mengisi variabel bk.sisi di dalam objek,
                    // kita bisa melempar nilai bk.sisi tersebut ke hitungKeliling
                    bk.hitungKeliling(bk.sisi);

                    // Opsional: Tetap simpan nilai d1 & d2 ke objek agar tidak 0 jika ingin dicetak di tampilkanHasil()
                    bk.d1 = d1;
                    bk.d2 = d2;

                    // 3. Tampilkan hasilnya
                    bk.tampilkanHasil();
                }
                
                if (mCheckBoxPrisma.isSelected()) {
                    jTextArea1.append("-> Menghitung Prisma Belah Ketupat...\n");

                     PrismaBelahKetupat prisma = new PrismaBelahKetupat();

                    // 2. IMPLEMENTASI METHOD OVERLOADING BERPARAMETER
                    // d1 & d2 belum diset ke objek, langsung lempar lewat parameter
                    prisma.hitungSisi(d1, d2);
                    prisma.hitungLuas(d1, d2);
                    prisma.hitungKeliling(prisma.sisi);
                    prisma.hitungVolume(d1, d2, t);
                    prisma.hitungLuasPermukaan(prisma.luas, prisma.keliling, t);

                    // 3. Baru simpan d1, d2, dan tinggi ke objek setelah semua perhitungan selesai
                    prisma.d1 = d1;
                    prisma.d2 = d2;
                    prisma.setTinggiPrisma(t);

                    // 4. Tampilkan Hasil
                    prisma.tampilkanHasil();
                }
                
                if (mCheckBoxLimas.isSelected()) {
                    jTextArea1.append("-> Menghitung Limas Belah Ketupat...\n");
                    
                    LimasBelahKetupat limas = new LimasBelahKetupat();

                    // IMPLEMENTASI METHOD OVERLOADING BERPARAMETER
                    // d1 & d2 belum diset ke objek, langsung lempar lewat parameter
                    limas.hitungSisi(d1, d2);
                    limas.hitungLuas(d1, d2);
                    limas.hitungKeliling(limas.sisi);
                    limas.hitungVolume(limas.luas, t);
                    limas.hitungLuasPermukaan(t, limas.sisi, limas.luas);

                    // Baru simpan d1, d2, dan tinggi ke objek setelah semua perhitungan selesai
                    limas.d1 = d1;
                    limas.d2 = d2;
                    limas.setTinggiLimas(t);

                    limas.tampilkanHasil();
                }
                
                // Efek autoscroll ke bawah
                jTextArea1.setCaretPosition(jTextArea1.getDocument().getLength());

            } catch (Exception e) {
               tampilkanNotif("Gagal! " + e.getMessage(), "Error", javax.swing.JOptionPane.ERROR_MESSAGE);
            }
        }
    
    }//GEN-LAST:event_jMenuInputActionPerformed

    private void RandomRunActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_RandomRunActionPerformed
        // TODO add your handling code here:
     if (!rCheckBoxBK.isSelected() && !rCheckBoxPrisma.isSelected() && !rCheckBoxLimas.isSelected()) {
            tampilkanNotif("Centang minimal satu bangun!");
            return;
        }

        boolean pakaiThread = cbMultithreading.isSelected();
        java.util.ArrayList<String> pilihanAktif = new java.util.ArrayList<>();
        if (rCheckBoxBK.isSelected()) pilihanAktif.add("BK");
        if (rCheckBoxPrisma.isSelected()) pilihanAktif.add("PRISMA");
        if (rCheckBoxLimas.isSelected()) pilihanAktif.add("LIMAS");
        
        jTextArea1.append("\n>> RANDOM MODE | MULTITHREADING : " + (pakaiThread ? "ON" : "OFF") + "\n");

        int jumlahData = 500; 


        panelBar.removeAll(); 
        panelBar.setLayout(new javax.swing.BoxLayout(panelBar, javax.swing.BoxLayout.Y_AXIS));

        Thread masterThread = new Thread(new Runnable() {
            @Override
            public void run() {
                Thread[] kumpulanThread = new Thread[jumlahData];
                BelahKetupat[] kumpulanBangun = new BelahKetupat[jumlahData];

                for (int i = 0; i < jumlahData; i++) {
                    double randD1 = 10 + (Math.random() * 40);
                    double randD2 = 10 + (Math.random() * 40);
                    double randTinggi = 10 + (Math.random() * 40);

                    String jenis = pilihanAktif.get(i % pilihanAktif.size());

                    if (jenis.equals("PRISMA")) {
                        PrismaBelahKetupat prisma = new PrismaBelahKetupat();
                        prisma.d1 = randD1;
                        prisma.d2 = randD2;
                        prisma.setTinggiPrisma(randTinggi);
                        kumpulanBangun[i] = prisma;
                    } else if (jenis.equals("LIMAS")) {
                        LimasBelahKetupat limas = new LimasBelahKetupat();
                        limas.d1 = randD1;
                        limas.d2 = randD2;
                        limas.setTinggiLimas(randTinggi);
                        kumpulanBangun[i] = limas;
                    } else {
                        BelahKetupat bk = new BelahKetupat();
                        bk.d1 = randD1;
                        bk.d2 = randD2;
                        kumpulanBangun[i] = bk;
                    }
                    
                    String namaThread = kumpulanBangun[i].getClass().getSimpleName() + " - " + (i+1);

                    // SUNTIK PROGRESS BAR KE DALAM PANEL KIRI LAKU-LAKU
                    javax.swing.JProgressBar pb = new javax.swing.JProgressBar(0, 100);
                    pb.setStringPainted(true);
                    kumpulanBangun[i].barProses = pb;     

                    panelBar.add(new javax.swing.JLabel("  " + namaThread));
                    panelBar.add(pb);
                    panelBar.add(javax.swing.Box.createVerticalStrut(10));

                    kumpulanThread[i] = new Thread(kumpulanBangun[i], namaThread);
                }

                // Refresh UI agar bar yang baru disuntikkan langsung muncul di layar
                javax.swing.SwingUtilities.invokeLater(new Runnable() {
                    public void run() {
                        panelBar.revalidate();
                        panelBar.repaint();
                    }
                });

                // === LOGIKA EKSEKUSI ===
                if (pakaiThread) {
                    // MULTITHREAD
                    for (int i = 0; i < jumlahData; i++) {
                        kumpulanThread[i].start();
                    }
                    for (int i = 0; i < jumlahData; i++) {
                        try { kumpulanThread[i].join(); } catch (InterruptedException e) {}
                    }
                } else {
                    // SINGLE THREAD
                    for (int i = 0; i < jumlahData; i++) {
                        String namaAsli = Thread.currentThread().getName(); 
                        Thread.currentThread().setName(kumpulanBangun[i].getClass().getSimpleName() + " - " + (i+1));
                        kumpulanBangun[i].run(); 
                        Thread.currentThread().setName(namaAsli); 
                    }
                }

                javax.swing.SwingUtilities.invokeLater(new Runnable() {
                    public void run() {
                        jTextArea1.append("\n=== PROSES SELESAI ===\n");
                        jTextArea1.setCaretPosition(jTextArea1.getDocument().getLength());
                    }
                });
            } 
        }); 

        masterThread.start();
    }//GEN-LAST:event_RandomRunActionPerformed
    public void tampilkanNotif(String pesan) {
        javax.swing.JOptionPane.showMessageDialog(this, pesan, "Info", javax.swing.JOptionPane.INFORMATION_MESSAGE);
    }

    // Method versi 2 (OVERLOADING): Butuh pesan, judul spesifik, dan tipe ikon error
    public void tampilkanNotif(String pesan, String judul, int tipeIkon) {
        javax.swing.JOptionPane.showMessageDialog(this, pesan, judul, tipeIkon);
    }
    
    public static void main(String[] args) {
      
        System.out.println("loding...");
        System.out.println("Membuka Antarmuka GUI...");

        // Memanggil dan memunculkan main (GUI) ke layar secara aman
        java.awt.EventQueue.invokeLater(new Runnable() {
            @Override
            public void run() {
                // Instansiasi objek main lalu buat menjadi terlihat (visible)
                new main().setVisible(true);
            }
        });
        
    }

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JScrollPane JScrollPane2;
    private javax.swing.JMenu Manual;
    private javax.swing.JMenuBar MenuBar;
    private javax.swing.JMenu Random;
    private javax.swing.JMenuItem RandomRun;
    private javax.swing.JCheckBoxMenuItem cbMultithreading;
    private javax.swing.JLabel jLabel1;
    private javax.swing.JMenuItem jMenuInput;
    private javax.swing.JScrollPane jScrollPane1;
    private javax.swing.JTextArea jTextArea1;
    private javax.swing.JCheckBoxMenuItem mCheckBoxBK;
    private javax.swing.JCheckBoxMenuItem mCheckBoxLimas;
    private javax.swing.JCheckBoxMenuItem mCheckBoxPrisma;
    private javax.swing.JPanel panelBar;
    private javax.swing.JCheckBoxMenuItem rCheckBoxBK;
    private javax.swing.JCheckBoxMenuItem rCheckBoxLimas;
    private javax.swing.JCheckBoxMenuItem rCheckBoxPrisma;
    // End of variables declaration//GEN-END:variables
}
